# simple-renderer

./: Cargo.toml
src/: indices.rs  lib.rs  program.rs  renderer.rs  vertices.rs
src/window/: event.rs  mod.rs
